--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,15 +1,23 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 
 <head>
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="{% static 'css/posts.css' %}">
+  {% comment %} <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> {% endcomment %}
 </head>
 
 <body>
-    {% include 'components/navbar.html' %}
-    {% block content %}
+  {% static 'css/posts.css' %}
+  {% include 'components/navbar.html' %}
+  <div class="container">
+  {% block content %}
 
-    {% endblock %}
+  {% endblock %}
+  </div>
 </body>
 
 </html>
