--- a/src/templates/blog/user.html
+++ b/src/templates/blog/user.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1> Home Page </h1>
+    <h1> User Page </h1>
     {{ request.user }}
 {% endblock %}
