--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -1,9 +1,8 @@
 <nav>
     <ul>
         <li><a href={% url "index" %}>Home</a></li>
-        <li><a href={% url "posts" %}>Posts</a></li>
-        <li><a href={% url "index" %}>User</a></li>
-        <li></li>
+        <li><a href={% url "profile" %}>User</a></li>
+
         <li><a href={% url "login" %}>Login</a></li>
         <li><a href={% url "logout" %}>Logout</a></li>
     </ul>
