--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -1,9 +1,14 @@
-<nav>
-    <ul>
-        <li><a href={% url "index" %}>Home</a></li>
-        <li><a href={% url "profile" %}>User</a></li>
-
-        <li><a href={% url "login" %}>Login</a></li>
-        <li><a href={% url "logout" %}>Logout</a></li>
-    </ul>
-</nav>
+<header>
+  <div class="container">
+    <a class="header-logo" href='./'>Logo<span>small text</span></a>
+    <div class="menu-header-container">
+      <nav id="menu-header" class="menu">
+        <li id="menu-item" class="menu-item"><a href={% url "index" %}>Home</a></li>
+        <li id="menu-item" class="menu-item"><a href={% url "index" %}>Files</a></li>
+        <li id="menu-item" class="menu-item"><a href={% url "profile" %}>User</a></li>
+        <li id="menu-item" class="menu-item"><a href={% url "login" %}>Login</a></li>
+        <li id="menu-item" class="menu-item"><a href={% url "logout" %}>Logout</a></li>
+      </nav>
+    </div>
+  </div>
+</header>
