refactoring, added new view, LOGIN_REDIRECT_URL, urls, html

--- a/src/templates/blog/post_details.html
+++ b/src/templates/blog/post_details.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
-{% block content %}
-    <h1> {{ post.title }} </h1>
-    <div> {{ post.text }} </div>
-{% endblock %}
+{% block main_column %}
+<div class="main">
+    <h1>{{ post.title }}</h1>
+    <h2>{{ post.author }}</h2>
+    <div>{{ post.text }}</div>
+</div>
+{% endblock main_column %}
