--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -1,6 +1,10 @@
 <div class="navbar">
   <a href={% url "index" %} class="menu-item active">Home</a>
   <a href={% url "files" %} class="menu-item">Files</a>
-  <a href={% url "my_profile" %} class="menu-item">Profile</a>
-  <a href={% url "login" %} class="menu-item right">Sign In</a>
+  {% if request.user.is_authenticated %}
+    <a href={% url "my_profile" %} class="menu-item">Profile</a>
+    <a href="" class="menu-item right">Edit Profile</a>
+  {% else %}
+    <a href={% url "login" %} class="menu-item right">Sign In</a>
+  {% endif %}
 </div>
