--- a/src/templates/users/profile.html
+++ b/src/templates/users/profile.html
@@ -9,7 +9,7 @@
                     <img src={{ user.profile.image.url }} alt="Username" class="avatar" width="192" height="192" loading="lazy"></a>
             </span>
             <div class="user-profile-top-content">
-                <h2>{{ request.user }} | {{ user.permissions }}</h2>
+                <h2>{{ user.username }} | {{ user.user_permissions }}</h2>
                 <h5>User status</h5>
             </div>
         </div>
