--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,12 +3,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href={% static "css/style.css" %}>
-    <link rel="shortcut icon" href={% static "images/favicon.ico" %} type="image/x-icon">
-    {% comment %} <link rel="preconnect" href="https://fonts.googleapis.com"> {% endcomment %}
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <title>Home</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href={% static "css/style.css" %}>
+  <link rel="shortcut icon" href={% static "images/favicon.ico" %} type="image/x-icon">
+  {% comment %} <link rel="preconnect" href="https://fonts.googleapis.com"> {% endcomment %}
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <script type="text/javascript" src={% static "js/hello_world.js" %}></script>
+  <title>Home</title>
 </head>
 
 <body>
