--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -3,6 +3,8 @@
   <a href={% url "files" %} class="menu-item">Files</a>
   {% if request.user.is_authenticated %}
     <a href={% url "my_profile" %} class="menu-item">Profile</a>
+    <a href="" class="menu-item">Traceback Base</a>
+    <a href={% url "logout" %} class="menu-item right">Logout</a>
     <a href="" class="menu-item right">Edit Profile</a>
   {% else %}
     <a href={% url "login" %} class="menu-item right">Sign In</a>
